# spotifatius

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: aur.yml  release.yml
proto/: service.proto
src/: main.rs
src/client/: service.rs
src/commands/: mod.rs  monitor.rs  opts.rs  output.rs  toggle_liked.rs  toggle_play.rs  toggle_play_pause.rs  toggle_saved.rs
src/server/: dbus.rs  liked_tracker.rs  mod.rs  play_pause_tracker.rs  saved_tracker.rs  service.rs
src/server/grpc/: api.rs  mod.rs  monitor_client.rs  server.rs  wake_watcher.rs
src/shared/: config.rs  consts.rs  mod.rs
templates/: .SRCINFO  PKGBUILD
