[package]
authors = ["Andreas Backx"]
categories = ["command-line-utilities"]
description = "A simple Spotify CLI primarily made for monitoring what songs you're listening to and displaying that in your bar of choice like waybar or polybar."
edition = "2021"
homepage = "https://github.com/AndreasBackx/spotifatius"
keywords = ["spotify", "waybar", "polybar"]
license = "MIT"
name = "spotifatius"
version = "0.1.0"

[dependencies]
anyhow = "1.0.41"
clap = {version = "3.1.12", features = ["derive"]}
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
prost = "0.10.1"
rspotify = {version = "0.11.0", features = ["cli", "env-file"]}
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = {version = "1.17.0", features = ["full"]}
tokio-stream = {version = "0.1.8", features = ["sync"]}
tonic = "0.7.1"
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["env-filter"]}
zbus = "2.1.1"
zvariant = "3.1.2"

[build-dependencies]
tonic-build = "0.7.0"
