[package]
authors = ["Andreas Backx"]
categories = ["command-line-utilities"]
description = "A simple Spotify CLI primarily made for monitoring what songs you're listening to and displaying that in your bar of choice like waybar or polybar."
edition = "2021"
homepage = "https://github.com/AndreasBackx/spotifatius"
keywords = ["spotify", "waybar", "polybar", "cli"]
license = "MIT"
name = "spotifatius"
version = "0.2.5"

[dependencies]
anyhow = "1.0.82"
clap = { version = "3.2.25", features = ["derive"] }
futures = { version = "0.3", default-features = false }
html-escape = "0.2.13"
# Don't use prost's `prost-derive` because it's unused.
prost = { version = "0.10.4", default-features = false, features = ["std"] }
# prost = { version = "0.12.4", default-features = false, features = ["std"] }
rspotify = { version = "0.12.0", features = [
  "cli", # enable requesting cli prompt for authentication
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
toml = "0.8.12"
tonic = "0.7.2"
# tonic = "0.11.0"
# Don't use tracing's `attributes` feature as it's unused.
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Use tokio instead of async-io
zbus = { version = "3.15.2", default-features = false, features = ["tokio"] }
# Don't use zvariant's `gvariant` feature as it's unused.
zvariant = { version = "3.15.2", default-features = false }

[build-dependencies]
tonic-build = "0.7.0"
